# canonical-huffpress

./: .gitignore  CMakeLists.txt  README.md
include/HuffmanComp/: HuffmanCompDecoder.hpp  HuffmanCompEncoder.hpp  MinHeap.hpp
src/: CMakeLists.txt  HuffmanCompDecoder.cpp  HuffmanCompEncoder.cpp  MinHeap.cpp  main.cpp
test/: CMakeLists.txt  MinHeapTest.cpp  decoder.cpp  encoder.cpp
